# athenaeum

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
examples/: README.md  playground.ipynb
playground/: playground.ipynb  pyproject.toml
src/athenaeum/: __init__.py  athenaeum.py  chunker.py  config.py  document_store.py  models.py  storage.py  toc.py
src/athenaeum/ocr/: __init__.py  base.py  custom.py  docling.py  lighton.py  markitdown.py  mistral.py
src/athenaeum/search/: __init__.py  bm25.py  hybrid.py  vector.py
tests/: conftest.py  test_athenaeum.py  test_bm25.py  test_chunker.py  test_hybrid.py  test_models.py  test_ocr_base.py  test_storage.py  test_toc.py  test_vector.py
tests/fixtures/: sample.md  sample.txt
