[project]
name = "athenaeum-playground"
version = "0.1.0"
description = "Interactive notebooks demonstrating how to use Athenaeum."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]
notebook = [
    "jupyterlab>=4.0.0",
    "ipykernel"
]

[tool.hatch.build.targets.wheel]
packages = []
